# Hikaru

./: .travis.yml  Cargo.toml
.github/: dependabot.yml
examples/: Cargo.toml
examples/simple/: main.rs
src/: bot.rs  error.rs  lib.rs  main.rs  rest.rs  shardconnection.rs  tests.rs
src/client/: mod.rs  user.rs
src/gateway/: close_code.rs  gatewayclosecode.rs  gatewayopcode.rs  gatewaypayloadhandler.rs  mod.rs  op_code.rs  shardconnection.rs
src/gateway/event/: dispatchevents.rs  mod.rs
src/util/: error.rs  logging.rs  mod.rs
