[package]
name = "hikaru"
version = "0.1.0"
authors = ["deprilula28", "Dream", "Cyber28"]
edition = "2018"

[dependencies]
async-tungstenite = { version = "0.4.2", features = ["tokio-runtime", "tokio-tls", "async-std-runtime"] }
async-trait = "0.1.31" # Hopefully temporary

futures = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }

tokio = { version = "0.2.18", features = ["full"] }
tokio-tls = "0.3.1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

reqwest = { version = "0.10.4", features = [ "json" ] }
flate2 = "1.0"
num_enum = "0.4.3"
log = "0.4.0"

[dev-dependencies]
env_logger = "0.7.1"