[package]
name = "hikaru"
version = "0.1.0"
authors = ["deprilula28", "Dream", "Cyber28"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = [ "json" ] }
tungstenite = "0.11.1"
flate2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.18", features = ["macros", "tcp", "dns", "io-util"] }
num_enum = "0.4.3"
log = "0.4.0"

[dev-dependencies]
env_logger = "0.7.1"